# anachro

./: .gitignore  .gitmodules  Cargo.toml  NOTES.md  README.md  SCRATCH.md  netlify.toml
anachro-client/: Cargo.toml  README.md
anachro-client-cli/: Cargo.toml
anachro-client-cli/src/: main.rs
anachro-client/src/: client.rs  client_io.rs  lib.rs  table.rs
anachro-icd/: Cargo.toml  README.md
anachro-icd/src/: arbitrator.rs  component.rs  lib.rs
anachro-server/: Cargo.toml
anachro-server-tcp-cli/: Cargo.toml
anachro-server-tcp-cli/src/: main.rs
anachro-server/src/: lib.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  client_io.rs  lib.rs  table.rs
crates/fleet-uarte/: Cargo.toml
crates/fleet-uarte/src/: anachro_io.rs  app.rs  buffer.rs  cobs_buf.rs  irq.rs  lib.rs
crates/groundhog/: Cargo.toml
crates/groundhog-nrf52/: Cargo.toml
crates/groundhog-nrf52/src/: lib.rs
crates/groundhog-nrf52/src/drivers/: mod.rs  twim.rs
crates/groundhog/src/: lib.rs
crates/icd/: Cargo.toml
crates/icd/src/: arbitrator.rs  component.rs  lib.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs
crates/spi/: Cargo.toml  README.md
crates/spi-nrf52/: Cargo.toml
crates/spi-nrf52/src/: arbitrator.rs  component.rs  lib.rs
crates/spi-tcp/: Cargo.toml
crates/spi-tcp/src/: lib.rs
crates/spi/src/: arbitrator.rs  component.rs  lib.rs
docs/anachro-book/: book.toml
docs/anachro-book/src/: SUMMARY.md
docs/anachro-book/src/anachro-pcs/: intro.md
docs/anachro-book/src/arbitrator-hw/: intro.md
docs/anachro-book/src/arbitrator-sw/: broker.md  intro.md
docs/anachro-book/src/card-hw/: intro.md
docs/anachro-book/src/card-sw/: icd.md  intro.md
docs/anachro-book/src/data-link-crates/: fleet-uarte.md  intro.md  spi-nrf52.md
docs/anachro-book/src/glossary/: arbitrator.md  card.md  icd.md  intro.md
docs/anachro-book/src/interconnect-hw/: intro.md
docs/anachro-book/src/intro/: intro.md  pc.md  protocol.md
docs/anachro-book/src/misc-sw/: groundhog.md  intro.md
docs/anachro-book/src/network/: control-plane.md  data-link-interface.md  data-link.md  intro.md  layers.md  mailbox-plane.md  obj-store-plane.md  physical.md  planes.md  protocol-interface.md  protocol.md  pub-sub-plane.md
docs/anachro-book/src/rfcs/: template.md
emb-tests/anachro-loopback/: Cargo.toml
emb-tests/anachro-loopback/src/: lib.rs
emb-tests/anachro-loopback/testsuite/: Cargo.toml
emb-tests/anachro-loopback/testsuite/tests/: test.rs
emb-tests/spi-loopback/: Cargo.toml
emb-tests/spi-loopback/.cargo/: config.toml
emb-tests/spi-loopback/src/: lib.rs
emb-tests/spi-loopback/testsuite/: Cargo.toml
emb-tests/spi-loopback/testsuite/tests/: test.rs
hardware/: stargazer-backplane.lib
hardware/anachro-rack-module/: anachro-rack-module-cache.lib  anachro-rack-module.csv  anachro-rack-module.kicad_pcb  anachro-rack-module.kicad_pcb-bak  anachro-rack-module.pro  anachro-rack-module.sch  anachro-rack-module.sch-bak  anachro-rack-module.xml  anachro-rack.lib  fp-info-cache  fp-lib-table  sym-lib-table
hardware/backplane-feather-arbitrator/: DebugHeaders.sch  backplane-feather-arbitrator-bom.csv  backplane-feather-arbitrator-cache.lib  backplane-feather-arbitrator.kicad_pcb  backplane-feather-arbitrator.kicad_pcb-bak  backplane-feather-arbitrator.pro  backplane-feather-arbitrator.sch  backplane-feather-arbitrator.sch-bak  backplane-feather-arbitrator.xml  fp-info-cache  fp-lib-table
hardware/backplane-feather-card/: Debug Headers.sch  Debug Headers.sch-bak  backplane-feather-card-cache.lib  backplane-feather-card.csv  backplane-feather-card.kicad_pcb  backplane-feather-card.kicad_pcb-bak  backplane-feather-card.pro  backplane-feather-card.sch  backplane-feather-card.sch-bak  backplane-feather-card.xml  fp-info-cache  go-jumpers.sch-bak  sym-lib-table
hardware/backplane-v1_1/: backplane-v1_1-cache.lib  backplane-v1_1.kicad_pcb  backplane-v1_1.pro  backplane-v1_1.sch  backplane-v1_1.sch-bak  fp-info-cache  sym-lib-table
hardware/stargazer-motherboard/: fp-info-cache  fp-lib-table  stargazer-motherboard-cache.lib  stargazer-motherboard.kicad_pcb  stargazer-motherboard.kicad_pcb-bak  stargazer-motherboard.pro  stargazer-motherboard.sch  stargazer-motherboard.sch-bak  stargazer.lib  sym-lib-table
hardware/stargazer-motherboard/stargazer-motherboard.pretty/: max3490eesa&plus_T.kicad_mod  weact-blackpill-nodebug.kicad_mod  weact-blackpill-swdonly.kicad_mod  weact-blackpill.kicad_mod
hardware/stargazer-stalk/: PCF8574T.lib  SOIC127P1032X265-16N.kicad_mod  card-connector.sch  card-connector.sch-bak  fp-info-cache  fp-lib-table  stargazer-stalk-cache.lib  stargazer-stalk.kicad_pcb  stargazer-stalk.kicad_pcb-bak  stargazer-stalk.lib  stargazer-stalk.pro  stargazer-stalk.sch  stargazer-stalk.sch-bak  sym-lib-table
hardware/stargazer-stalk/stargazer-stalk.pretty/: SOIC127P1032X265-16N.kicad_mod  pmod-double-vertical.kicad_mod  pmod-double.kicad_mod
pc-examples/arbitrator-spi-tcp/: Cargo.toml
pc-examples/arbitrator-spi-tcp/src/: main.rs
pc-examples/client-tcp/: Cargo.toml
pc-examples/client-tcp/src/: main.rs
pc-examples/component-spi-tcp/: Cargo.toml
pc-examples/component-spi-tcp/src/: main.rs
pc-examples/server-tcp/: Cargo.toml
pc-examples/server-tcp/src/: main.rs
spi/: Cargo.toml  README.md
spi/src/: arbitrator.rs  component.rs  lib.rs  tcp.rs
stargazer/arb-001/: Cargo.toml
stargazer/arb-001/.cargo/: config.toml
stargazer/arb-001/src/: lib.rs
stargazer/arb-001/testsuite/: Cargo.toml
stargazer/arb-001/testsuite/tests/: test.rs
stargazer/cpu-002/: Cargo.toml
stargazer/cpu-002/.cargo/: config.toml
stargazer/cpu-002/src/: lib.rs
stargazer/cpu-002/testsuite/: Cargo.toml
stargazer/cpu-002/testsuite/tests/: test.rs
stargazer/key-003/: Cargo.toml
stargazer/key-003/.cargo/: config.toml
stargazer/key-003/testsuite/: Cargo.toml
stargazer/rpi-004/: Cargo.toml
stargazer/rpi-004/src/: comms.rs  main.rs
stargazer/stargazer-icd/: Cargo.toml
stargazer/stargazer-icd/src/: lib.rs
(+13 files in other folders)
