[workspace]

members = [
    "crates/client",
    "crates/icd",
    "crates/server",
    "crates/spi",
    "crates/spi-tcp",
    "crates/spi-nrf52",
    "crates/groundhog",

    "pc-examples/client-tcp",
    "pc-examples/server-tcp",
    "pc-examples/component-spi-tcp",
    "pc-examples/arbitrator-spi-tcp",

]

exclude = [
    "vendor/nrf-hal",
    "emb-tests",
]

[patch.crates-io]
nrf-hal-common = { path = "vendor/nrf-hal/nrf-hal-common" }
nrf52840-hal   = { path = "vendor/nrf-hal/nrf52840-hal" }
bbqueue        = { path = "vendor/bbqueue/core" }
