[workspace]

members = [
    "crates/client",
    "crates/icd",
    "crates/server",
    "crates/spi",
    "crates/spi-tcp",
    "crates/spi-nrf52",
    "crates/groundhog",
    "crates/groundhog-nrf52",
    "crates/fleet-uarte",

    "pc-examples/client-tcp",
    "pc-examples/server-tcp",
    "pc-examples/component-spi-tcp",
    "pc-examples/arbitrator-spi-tcp",

    "stargazer/stargazer-icd",
    "stargazer/rpi-004",
]

exclude = [
    "vendor/nrf-hal",
    "emb-tests",
    "stargazer/arb-001",
    "stargazer/cpu-002",
    "stargazer/key-003",
]

[patch.crates-io]
nrf-hal-common = { path = "vendor/nrf-hal/nrf-hal-common" }
nrf52840-hal   = { path = "vendor/nrf-hal/nrf52840-hal" }
bbqueue        = { path = "vendor/bbqueue/core" }
postcard = { git = "https://github.com/jamesmunns/postcard.git", rev = "1cd7288df6a680152009c945783d124c47329a75" }
