[package]
name = "anachro-client"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anachro-icd = { version = "0.1", path = "../anachro-icd" }
postcard = "0.5"

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]
