[package]
name = "anachro-icd"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.uuid]
version = "0.8.1"
default-features = false
features = ["serde", "v4"]

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]

[dev-dependencies.postcard]
version = "0.5.1"
features = ["use-std"]
