[package]
name = "anachro-icd"
version = "0.1.2"
description = "The Interface Control Document for Anachro-PC"
repository = "https://github.com/jamesmunns/anachro"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
heapless = "0.5.5"

[dependencies.serde]
version = "1.0.114"
default-features = false
features = ["derive"]

[dev-dependencies.postcard]
version = "0.5.1"
default-features = false

[features]
std = ["postcard/use-std"]
