[package]
name = "anachro-server"
version = "0.1.0"
description = "The Server/Broker Library for Anachro-PC"
repository = "https://github.com/jamesmunns/anachro"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
anachro-icd = { version = "0.1.3", path = "../anachro-icd" }
heapless = "0.5.5"
