[package]
name = "anachro-spi"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbqueue = "0.4.10"

[dependencies.anachro-client]
version = "0.1"
path = "../crates/client"

[dependencies.anachro-server]
version = "0.1"
path = "../crates/server"

[dependencies.serde]
version = "1.0"
optional = true
default-features = true
features = ["derive"]

[dependencies.postcard]
version = "0.5"
optional = true
features = ["use-std"]

[features]
tcp = ["serde", "postcard"]

