[package]
name = "groundhog-nrf52"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
groundhog = "0.1"
cortex-m-rtic = "0.5.5"
nrf52840-hal = "0.11.0"
