[package]
name = "groundhog-nrf52"
version = "0.2.1"
description = "A rolling timer abstraction for the nrf52"
repository = "https://github.com/jamesmunns/anachro"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
groundhog = "0.1"
cortex-m-rtic = "0.5.5"
nrf52840-hal = "0.12.0"
