[package]
name = "groundhog"
version = "0.2.0"
description = "A rolling timer abstraction"
repository = "https://github.com/jamesmunns/anachro"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]

[features]
u128 = []
