[package]
name = "anachro-spi"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbqueue = "0.4.10"

[dependencies.anachro-client]
version = "0.1"
path = "../client"

[dependencies.anachro-server]
version = "0.1"
path = "../server"



