[package]
name = "arbitrator-spi-tcp"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anachro-spi = { path = "../../spi" }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "0.5.1", features = ["use-std"] }
