[package]
name = "anachro-server-tcp-cli"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anachro-icd = { path = "../../crates/icd" }
anachro-server = { path = "../../crates/server" }
serde = "1.0.115"
anachro-spi = { path = "../../crates/spi" }
anachro-spi-tcp = { path = "../../crates/spi-tcp" }
bbqueue = "0.4.10"

# ???
rand = "0.7.3"
heapless = "0.5.5"

[dependencies.postcard]
version = "0.5.1"
features = ["use-std"]

