[package]
name = "stargazer-icd"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.14.2"
postcard = "0.5.0"

[dependencies.anachro-icd]
path = "../../crates/icd"

[dependencies.anachro-client]
path = "../../crates/client"

[dependencies.serde]
version = "1.0.111"
default-features = false
features = ["derive"]
